[package]
name = "meta_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"serde_json" = "1.0.69"
"serde" = { version = "1.0.130", features = ["derive"] }
"uuid" = {version = "0.8.2", features = ["serde", "v4"]}